[gd_scene load_steps=21 format=3 uid="uid://dx5dn6edqn44f"]

[ext_resource type="FontFile" uid="uid://clw4ys1yqiph6" path="res://Assets/MegamaxJonathanToo-YqOq2.ttf" id="1_5aws6"]
[ext_resource type="Script" path="res://Scripts/Globals/main_menu.gd" id="1_tfc5c"]
[ext_resource type="Texture2D" uid="uid://cxhh2l8cjex8w" path="res://Assets/Sprites/Idle.png" id="2_0qixo"]
[ext_resource type="Texture2D" uid="uid://djq2oa1xqy16l" path="res://Assets/SPLASH SCREEN.PNG" id="2_q6spg"]
[ext_resource type="Texture2D" uid="uid://bsoo11v3t6hc3" path="res://Assets/Sprites/Jump.png" id="3_h3h57"]
[ext_resource type="Texture2D" uid="uid://bd4fq03fgcsig" path="res://Assets/Sprites/Running.png" id="4_3cabu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mt645"]
atlas = ExtResource("2_0qixo")
region = Rect2(0, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_eu1qf"]
atlas = ExtResource("2_0qixo")
region = Rect2(45, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayqp6"]
atlas = ExtResource("2_0qixo")
region = Rect2(90, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_35dbj"]
atlas = ExtResource("2_0qixo")
region = Rect2(135, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxr6a"]
atlas = ExtResource("2_0qixo")
region = Rect2(180, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_n45ps"]
atlas = ExtResource("2_0qixo")
region = Rect2(225, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_kswic"]
atlas = ExtResource("2_0qixo")
region = Rect2(270, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tyjq"]
atlas = ExtResource("2_0qixo")
region = Rect2(315, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_ystft"]
atlas = ExtResource("3_h3h57")
region = Rect2(0, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ldel"]
atlas = ExtResource("4_3cabu")
region = Rect2(0, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_8uf43"]
atlas = ExtResource("4_3cabu")
region = Rect2(45, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_m62n2"]
atlas = ExtResource("4_3cabu")
region = Rect2(90, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1lxf"]
atlas = ExtResource("4_3cabu")
region = Rect2(135, 0, 45, 45)

[sub_resource type="SpriteFrames" id="SpriteFrames_u5bby"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mt645")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eu1qf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayqp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35dbj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxr6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n45ps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kswic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tyjq")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ystft")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ldel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8uf43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m62n2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1lxf")
}],
"loop": true,
"name": &"run",
"speed": 7.0
}]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tfc5c")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 639.0
offset_bottom = 366.0
texture = ExtResource("2_q6spg")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = 26.0
offset_right = 80.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("1_5aws6")
theme_override_font_sizes/font_size = 26
text = "Play"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("1_5aws6")
theme_override_font_sizes/font_size = 26
text = "Quit"

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(318, 102)
scale = Vector2(2.47778, 2.47778)
sprite_frames = SubResource("SpriteFrames_u5bby")
animation = &"idle"
autoplay = "idle"
frame = 1
frame_progress = 0.643551

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -211.0
offset_top = 158.0
offset_right = 225.0
offset_bottom = 209.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 7
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_5aws6")
theme_override_font_sizes/font_size = 45
text = "Pete the Pig"

[node name="Best_time" type="Label" parent="."]
layout_mode = 0
offset_left = 183.0
offset_top = 290.0
offset_right = 343.0
offset_bottom = 313.0
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 11
theme_override_fonts/font = ExtResource("1_5aws6")
theme_override_font_sizes/font_size = 20
text = "Best Time: "

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
